[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=75.8.0",
  "setuptools-scm>=8.1.0"
]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "aiohttp>=3.11.11",
  "attrs>=24.3.0",
  "cattrs>=24.1.2",
  "orjson>=3.10.14",
  "packaging>=24.2",
  "path>=17.1.0",
  "pretty-errors>=1.2.25",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "urllib3>=2.3.0"
]
description = "Archiving utilities for the Arm Machine Readable Architecture (MRA) XML files"
dynamic = [
  "version"
]
keywords = [
  "arm",
  "mra",
  "machine readable architecture",
  "aarch32",
  "aarch64",
  "archiver"
]
license = {text = "BSD-2-Clause"}
name = "arm-mra-archiver"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "ipython>=8.31.0",
  "mypy>=1.14.1",
  "ruff>=0.9.1",
  "pytest>=8.3.4",
  "types-requests>=2.32.0.20241016"
]

[project.scripts]
arm-mra-archiver-live-urls = "arm_mra_archiver.tools.live_urls:main"

[project.urls]
repository = "https://github.com/jevinskie/arm-mra-archiver"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools]
packages = ["arm_mra_archiver"]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "arm_mra_archiver._version.__version__"}

[tool.setuptools_scm]
version_file = "arm_mra_archiver/_version.py"
